WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180546
CacheStorage Cache should not remove any disk entry when clearing its memory representation
https://bugs.webkit.org/show_bug.cgi?id=180546
Summary
CacheStorage Cache should not remove any disk entry when clearing its memory ...
youenn fablet
Reported
2017-12-07 13:25:53 PST
CacheStorage Cache should not remove any disk entry when clearing its memory representation.
Attachments
Patch
(1.42 KB, patch)
2017-12-07 13:26 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-12-07 13:26:57 PST
Created
attachment 328729
[details]
Patch
youenn fablet
Comment 2
2017-12-07 14:13:42 PST
This patch is tested manually by going to website using service worker: - load a page - ensure working in offline mode - close page and wait for service worker to be terminated - reload page and web site should work/cache API should have all its data It will be good to add an API tests once we have a server running for these.
WebKit Commit Bot
Comment 3
2017-12-07 15:17:59 PST
Comment on
attachment 328729
[details]
Patch Clearing flags on attachment: 328729 Committed
r225646
: <
https://trac.webkit.org/changeset/225646
>
WebKit Commit Bot
Comment 4
2017-12-07 15:18:01 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-12-07 15:18:27 PST
<
rdar://problem/35920909
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug