CacheStorage Cache should not remove any disk entry when clearing its memory representation https://bugs.webkit.org/show_bug.cgi?id=180546

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-07
Reviewed by Brady Eidson.

* NetworkProcess/cache/CacheStorageEngineCache.cpp:
(WebKit::CacheStorage::Cache::clearMemoryRepresentation):

Canonical link: https://commits.webkit.org/196466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225646 268f45cc-cd09-0410-ab3c-d52691b4dbfc